--- a/bootstrap/css/estilos.css
+++ b/bootstrap/css/estilos.css
@@ -2,8 +2,8 @@
   width: 50%;
 }
 .card-img{
-  width: 20%;
-  height: 20%;
+  width: 140px;
+  height: 140px;
 }
 .searchCard{
   height: 90px;
@@ -13,4 +13,10 @@
 }
 nav{
   margin:5px 0;
+}
+/* fue necessario el mediaquery porque el framework falla con la instruccion hidden-sm-down */
+@media only screen and (max-width: 768px){
+  aside{
+    display: none;
+  }
 }
