--- a/Materialize/css/eestilos.css
+++ b/Materialize/css/eestilos.css
@@ -1,13 +1,36 @@
+body{
+  background-image: url("../img/kiosko.jpg") ;
+  background-attachment: fixed;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+.capa-transparente{
+  height: 100%;
+  background: rgba(141, 159, 193, 0.40);
+}
+#cabecera{
+  padding-top: 1%;
+}
 .logo{
-  width: 50%;
+  display: block;
+  text-align: center;
 }
-div.container-img{
-  padding: 5px;
-  float: left;
-  width: 250px;
-}
+#menu{
+  text-align: center;
 
+}
+#titulo{
+  padding-top: 5%;
+
+}
+figure{
+  margin: 0 auto !important;
+}
 img.articlcle-img{
   width: 100%;
 
 }
+/* div.card-container{
+  padding-left: 20% !important;
+
+} */
